[package]
name = "twitter-internal-api"
version = "0.1.0"
edition = "2024"
description = "Twitter internal API"
license = "MIT"
authors = ["ohaddahan@gmail.com"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
url = { version = "2", features = ["serde"] }
tracing = { version = "0.1.41", features = ["attributes", "tracing-attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "json"] }
tracing-serde = "0.2.0"
dotenv = { version = "0.15.0" }

[dependencies.uuid]
version = "1.3.4"
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js", # Enable UUID generation in WebAssembly
]
